# android-ifaddrs

./: CMakeLists.txt  README.md  ifaddrs.c
